-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 18.0.0-beta1
-
None
-
Creator 18.0.0-beta1 + PySide 6.9.2
-
146ba96ca (18.0)
Test steps:
1. Install Creator 18.0.0-beta1 and PySide 6.9.2 via the Online Installer Tool
2. Create a new PySide application
3. Install 'PySide 6.9.2 Wheel' via the banner
Result:
PySide install fails.
WARNING: Requirement 'shiboken6-6.9.2+commercial-cp39-abi3-manylinux_2_28_x86_64.whl' looks like a filename, but the file does not exist WARNING: Requirement 'shiboken6_generator-6.9.2+commercial-cp39-abi3-manylinux_2_28_x86_64.whl' looks like a filename, but the file does not exist WARNING: Requirement 'shiboken6_wizard-6.9.2+commercial-cp39-abi3-manylinux_2_28_x86_64.whl' looks like a filename, but the file does not exist WARNING: Requirement 'pyside6_essentials-6.9.2+commercial-cp39-abi3-manylinux_2_28_x86_64.whl' looks like a filename, but the file does not exist WARNING: Requirement 'pyside6_examples-6.9.2+commercial-cp39-abi3-manylinux_2_28_x86_64.whl' looks like a filename, but the file does not exist WARNING: Requirement 'pyside6_addons-6.9.2+commercial-cp39-abi3-manylinux_2_28_x86_64.whl' looks like a filename, but the file does not exist WARNING: Requirement 'pyside6-6.9.2+commercial-cp39-abi3-manylinux_2_28_x86_64.whl' looks like a filename, but the file does not exist WARNING: Requirement 'pyside6_m2m-6.9.2+commercial-cp39-abi3-manylinux_2_28_x86_64.whl' looks like a filename, but the file does not exist Processing ./shiboken6-6.9.2+commercial-cp39-abi3-manylinux_2_28_x86_64.whl ERROR: Could not install packages due to an OSError: [Errno 2] No such file or directory: '/home/junokso/RTA/QtCreator_18.0.0-beta1/Tools/Qt Creator 18.0.0-beta1/bin/shiboken6-6.9.2+commercial-cp39-abi3-manylinux_2_28_x86_64.whl' Terminal process exited with code 1.