PySide: Fix installation

Amends b6c3c284daf9e115531880765e015bd1b89b416e
that lost the working directory for the pip install process.

Fixes: QTCREATORBUG-33477
Change-Id: I00346b2e68840b79ef647e2d514645a4b676830b
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>